--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,7 @@
 pandoc: 2.19.2
 pkgdown: 2.0.9
 pkgdown_sha: ~
-articles: {}
-last_built: 2024-06-02T04:51Z
+articles:
+  Introduction: Introduction.html
+last_built: 2024-06-03T19:28Z
 
