--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,11 +2,21 @@ Package: riccib
 Type: Package
 Title: Objective Bayesian analysis for the Ricci distribution
 Version: 0.1.0
-Author: Jesus y Pedro
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: This function estimates the parameters of the Ricci distribution from
- a sample and using Jeffrey's prior.
-License: What license is it under?
+Author: Jesus Achire y Pedro Ramos
+Maintainer: Jesus Achire <jeachire@uc.cl>
+Description: This package contains a function called `riccibo`, which allows the
+    estimation of the parameters of a Ricci model using a Bayesian approach with
+    Jeffreys' non-informative prior. To start using the `riccib` package and the
+    `riccibo` function, you need to install it from the GitHub repository
+    <https://github.com/jeachire/riccib>. Additionally, you need to install the
+    following dependencies from CRAN: `MCMCpack`, `coda`, and `VGAM`. For more
+    details about the `riccibo` function and how to use it, please refer to the
+    documentation at <https://jeachire.github.io/riccib/reference/riccibo.html>.
+License: GPL-3
+Imports:
+    MCMCpack,
+    coda,
+    VGAM
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.1
